✨ Use the stack name to named the kubernetes cluster

--- a/Pulumi.yaml
+++ b/Pulumi.yaml
@@ -6,6 +6,7 @@ resources:
   kubernetes-cluster:
     type: scaleway:KubernetesCluster
     properties: # The arguments to resource properties.
+      name: ${pulumi.stack}
       autoUpgrade:
         enable: false
         maintenanceWindowDay: monday
